test/fail/TypeInTypeViaSetInfty.ma
-- 2010-09-03

let star : Set # = Set #
